deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messengerws
  namespace: reporter-dev
  labels:
    app: messengerws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messengerws
  template:
    metadata:
      labels:
        app: messengerws
    spec:
      containers:
        - name: messengerws
          image: azcrhs.azurecr.io/messengerws:0.0.2
          command: ["uvicorn"]
          args: ["main:app", "--host", "0.0.0.0", "--port", "9001"]
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
              protocol: TCP
