service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messengerws
  namespace: reporter-dev
  labels:
    app: messengerws
spec:
  ports:
  - port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: messengerws
  type: ClusterIP
