virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: messengerws-dev-vs
  namespace: reporter-dev
spec:
  gateways:
    - aks-istio-system/hs-gateway
  hosts:
    - '*'
  http:
  - match:
    - uri:
        prefix: /messengerws
    route:
    - destination:
        host: messengerws
        port:
          number: 9001
